# gsrc-trunk

./: .bzrignore  AUTHORS  ChangeLog  GNUmakefile.am  INSTALL  NEWS  README  TODO  configure.ac  gsrc.in  setup.sh.in
.bzr/branch/: location
.bzr/checkout/: dirstate
doc/: config.txt  help.txt  version.texi
gar/: config.mk.in  gar.conf.mk  gar.env.mk  gar.lib.mk  gar.master.mk  gar.mk  gar.site.mk
gar/gar.lib/: adhoc.mk  auto.mk  broken.mk  cmake.mk  external.mk  gnustep.mk  info.mk  info.mk.old  mesonninja.Nov2018.mk  mesonninja.mk  python.mk  wrong_arch.mk
pkg/bio/aragorn/: Makefile  config.mk  sha256sums
pkg/bio/bambamc/: Makefile  config.mk  sha256sums
pkg/bio/bamtools/: Makefile  config.mk
pkg/bio/barrnap/: Makefile  config.mk  sha256sums
pkg/bio/beagle-lib/: Makefile  config.mk
pkg/bio/bedtools/: Makefile  config.mk  sha256sums
pkg/bio/bfast/: Makefile  config.mk  sha256sums
pkg/bio/bismark/: Makefile  config.mk  sha256sums
pkg/bio/bowtie2/: Makefile  config.mk  sha256sums
pkg/bio/breakway/: Makefile  config.mk  sha256sums
pkg/bio/bwa/: Makefile  config.mk  sha256sums
pkg/bio/cd-hit/: Makefile  config.mk  sha256sums
pkg/bio/clustal-omega/: Makefile  config.mk  sha256sums
pkg/bio/clustalw/: Makefile  config.mk  sha256sums
pkg/bio/csblast/: Makefile  config.mk  sha256sums
pkg/bio/cufflinks/: Makefile  config.mk  sha256sums
util/: buildit.sh  fetchupdate.pl  gar.conf.inc  gen-version-nums.py  gsrc-maint.mk  new_project.sh  sync-descriptions.sh
util/templates/: Makefile.m4  config.mk.m4  package-list.html.m4  package.html.templ
(+2829 files in other folders)
